--- a/_posts/2017-11-09-css-prep.markdown
+++ b/_posts/2017-11-09-css-prep.markdown
@@ -6,17 +6,22 @@ categories: jekyll update
 ---
 # What do you think of pre-compiling your CSS?
 
+It's ok.
+#### Questions
+__1-Compare to regular css__
 
 
-1. Compare to regular css
-2. Which techniques did you use?
-3. Pros and cons?
+__2-Which techniques did you use?__
 
-**1a.** It's exactly the same as css, only you store values in a variable that starts with the dollar sign, and you link those variables to multiple css codes of your choice, easier to maintain in the long run.
 
-**2a.** border, background, color (may have changed some due to error)
+__3-Pros and cons?__
 
-**3a.** __Cons__: More code, __pros:__ cleaner ui, coming from css, i found inlines to be much easier to understand, like this example `body {color: red;}`.
+**1a.** Storing values in a variable that starts with the dollar sign, and you link those variables to multiple css codes of your choice, easier to maintain in the long run.
+
+**2a.** border, background, color (may have changed some due to error), used @mixin and @include, and ofcourse storing values, and background in $variables, i hope that answers your question.
+
+**3a.** __Cons__: More code. 
+__pros:__ cleaner ui, coming from css, i found inlines to be much easier to understand, like this example `body {color: red;}` over `body color: red`
 
 
 
